feat: update font config

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,5 +2,5 @@
 @plugin "@iconify/tailwind4";
 
 @theme {
-  --font-sans: var(--font-sans);
+  --font-sans: var(--font-en-sans), var(--font-zh-sans);
 }
